force-app/main/default/objects/ConflictProject__c/ConflictProject__c.object-meta.xml
<CustomObject>
    <label>冲突项目</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>冲突项目列表编号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>