force-app/main/default/objects/ConflictProject__c/fields/ConflictProject__c.field-meta.xml
<CustomField>
    <fullName>ConflictProject__c</fullName>
    <label>冲突项目</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>冲突项目列表</relationshipLabel>
    <relationshipName>ConflictProjectn0db</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>