force-app/main/default/objects/ConflictProject__c/fields/ProjectName__c.field-meta.xml
<CustomField>
    <fullName>ProjectName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>项目名称</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>所属冲突项目</relationshipLabel>
    <relationshipName>ProjectNamen0AF</relationshipName>
    <type>Lookup</type>
</CustomField>